css/styles.css
/* ... */
.new__title{
  font-size: var(--h3-font-size);
  color: var(--first-color);
  margin-bottom: .5rem;
}

.new__description{
  font-size: var(--small-font-size);
  margin-bottom: .5rem;
}

.new__card:nth-child(2) img{
  order: -1;
}

.new__button{
  justify-self: center;
  padding: .125rem .5rem;
  margin-top: .6rem;
}
/*=============== ABOUT ===============*/
.about__container{
  row-gap: 4rem;
}

.about__data{
  position: relative;
  text-align: center;
}

.about__description{
  margin-bottom: 3rem;
}

.about__img{
  width: 320px;
  justify-self: center;
}

/*=============== finder ===============*/
.finder__container{
  width: 100vw;
  height: 5vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 5rem;
}

input{
  width: 50vw;
  padding: 12px;
  outline: none;
  border: 3px solid rgb(192, 192, 192);
  background-color: rgb(238, 238, 238);
  font-weight: 600;
}



/*=============== FAVORITES ===============*/
.favorite__data2{
  position: relative;
  text-align: center;
  margin: .5rem;
}

.favorite__data{
  position: relative;
  text-align: center;
  margin: .5rem;
}

.favorite__description{
  margin-bottom: 2rem;
}

.favorite__container{
  padding-top: 3.5rem;
  grid-template-columns: repeat(2, 1fr);
  gap: 1.5rem 1.5rem;
  margin-bottom: 7rem;
}

.favorite__card{
  position: relative;
  background-color: var(--container-color);
  box-shadow: 0 12px 24px hsla(0, 0%, 0%, .3);
  padding: 1rem;
  border: 2px solid transparent;
  transition: border-color .4s;
}

.favorite__title{
  font-size: var(--h2-font-size);
  font-family: var(--second-font);
  color: var(--first-color);
}

.favorite__card:hover{
  border-color: var(--first-color);
  cursor: pointer;
}

/*===============  POP UP  ===============*/
.contiene#blur.active{
  filter: blur(20px);
  pointer-events: none;
  user-select: none;
  overflow: hidden;
}

#popup{
  position: fixed;
  top: 40%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 600px;
  padding: 30px;
  box-shadow: 0 5px 30px rgba(255, 255, 255, 0.30);
  background: #fff;
  visibility: hidden;
  opacity: 0;
  transition: 0.5s;
}
#popup.active{
  top: 50%;
  visibility: visible;
  opacity: 1;
  transition: 0.5s;
}

.closer{
  position: absolute;
  right: 2rem;
  background-color: var(--container-color);
  color: var(--title-color);
  padding: 6px;
  font-size: 1.25rem;
}
.p__data{
  text-align: center;
  padding: 1rem;
}
.p__title{
  font-size: var(--h1-font-size);
  color: rgb(36, 36, 36);
}
.p__img {
  max-width: 100%;
  max-height: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.p__img img{
  max-width: 100%;
  height: 80%;
}





/*=============== FOOTER ===============*/
.footer{
  padding-block: 3rem 2rem;
}

.footer__container{
  position: relative;
  row-gap: 4rem;
}

.footer__logo{
  display: inline-block;
  color: var(--first-color);
  font-size: var(--h2-font-size);
  font-family: var(--second-font);
  margin-bottom: .5rem;
  transition: color .4s;
}

.footer__logo:hover{
  color: var(--first-color-alt);
}

.footer__content{
  grid-template-columns: repeat(2, max-content);
  gap: 4rem 2rem;
}

.footer__title{
  font-size: var(--h3-font-size);
  margin-bottom: 1.25rem;
}

.footer__list{
  display: grid;
  row-gap: .75rem;
}

.footer__info{
  font-style: normal;
}

.footer__social{
  display: flex;
  column-gap: 1rem;
}

.footer__social a{
  color: var(--text-color);
  font-size: 1.5rem;
  transition: color .4s;
}

.footer__social a:hover{
  color: var(--first-color);
}

.footer__img-1,
.footer__img-2{
  position: absolute;
}

.footer__img-1{
  width: 40px;
  top: 2.5rem;
  right: 1.5rem;
}

.footer__img-2{
  width: 45px;
  top: 18rem;
  left: 12rem;
}

.footer__copy{
  display: block;
  margin-top: 6rem;
  text-align: center;
  font-size: var(--small-font-size);
}
/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar{
  width: .6rem;
  background-color: hsl(0, 0%, 0%);
}

::-webkit-scrollbar-thumb{
  background-color: hsl(0, 0%, 40%);
}

::-webkit-scrollbar-thumb:hover{
  background-color: hsl(0, 0%, 50%);
}

/*=============== SCROLL UP ===============*/
.scrollup{
  position: fixed;
  right: 1rem;
  bottom: -50%;
  background-color: var(--container-color);
  color: var(--title-color);
  box-shadow: 0 12px 24px hsla(0, 0%, 0%, .3);
  display: inline-flex;
  padding: 6px;
  font-size: 1.25rem;
  z-index: var(--z-tooltip);
  transition: bottom .4s, transform .4s;
}

.scrollup:hover{
  transform: translateY(-.5rem);
}


/* Show Scroll Up */
.show-scroll{
  bottom: 3rem;
}

/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 340px){
  .container{
    margin-inline: 1rem;
  }

  .home__title{
    font-size: 1.2rem;
  }

  .new__content{
    grid-template-columns: 200px;
    justify-content: center;
  }
  .new__card{
    flex-direction: column;
    row-gap: 1rem;
    text-align: center;
  }
  .new__card:nth-child(2) img{
    order: initial;
  }

  .favorite__data2{
    margin: 2rem;
  }
  .favorite__container{
    grid-template-columns: 180px;
    justify-content: center;
  }

  #popup{
    width: 90%;
    padding: 10px;
  }

  .footer__content{
    grid-template-columns: max-content;
  }
}
/* testing media for pop up only*/
@media screen and (max-width: 575px){

  #popup{
    width: 90%;
    padding: 10px;
  }
}
/* ... */

